[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pypower_sim"
version = "0.0.0"
authors = [
    { name = "David P. Chassin", email = "dchassin@eudoxys.com" }
]
maintainers = [
    {name = "David P. Chassin <dpchassin@gmail.com>"},
    ]
description = "PyPOWER time-series simulator"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["eudoxys","pypower","simulation","quasi-steady","timeseries"]
license = {text="MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
]

[tool.setuptools]
packages = [
    "pypower_sim"
]

[project.scripts]
ppsim = "pypower_sim:main"

[project.urls]
Homepage = "https://github.com/eudoxys/pypower_sim"
Documentation = "https://www.eudoxys.com/pypower_sim"
Repository = "https://github.com/eudoxys/pypower_sim.git"
Issues = "https://github.com/eudoxys/pypower_sim/issues"
